--- a/Descriptive_Statistics.ipynb
+++ b/Descriptive_Statistics.ipynb
@@ -903,6 +903,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##**Pie chart**\n",
+        "\n",
+        "A pie chart is a circular statistical graphic, which is divided into slices to illustrate numerical proportion."
+      ],
+      "metadata": {
+        "id": "ckHzMOCHvQkz"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "figsize=(25, 10)\n",
