--- a/Descriptive_Statistics.ipynb
+++ b/Descriptive_Statistics.ipynb
@@ -239,7 +239,7 @@
         "id": "pk16UhvHes7L"
       },
       "source": [
-        "### Describe Numerical Value"
+        "**Describe Numerical Value**"
       ]
     },
     {
@@ -490,7 +490,7 @@
         "id": "1hRU6tg0fGPj"
       },
       "source": [
-        "##**Box Plot**\n",
+        "**Box Plot**\n",
         "\n",
         "We can describe the values of the columns by calculating the sum of several percentiles and show in boxplot. "
       ]
@@ -570,7 +570,7 @@
         "id": "I1cTyNjVr9j7"
       },
       "source": [
-        "##**Scatter Plot**\n",
+        "**Scatter Plot**\n",
         "\n",
         "A scatter plot is a diagram where each value in the data set is represented by a dot."
       ]
@@ -611,7 +611,7 @@
         "id": "GvbuwF_fr9j9"
       },
       "source": [
-        "##**Histogram Plot**\n",
+        "**Histogram Plot**\n",
         "\n",
         "A histogram is a graph showing frequency distributions.\n",
         "\n",
@@ -714,7 +714,7 @@
         "id": "_s2D6050r9kB"
       },
       "source": [
-        "##**Frequency Distribution** "
+        "**Frequency Distribution** "
       ]
     },
     {
@@ -764,7 +764,7 @@
         "id": "d1gVitB5r9kC"
       },
       "source": [
-        "##**Box Plot**"
+        "**Box Plot**"
       ]
     },
     {
@@ -812,7 +812,7 @@
         "id": "9WjyPCLpr9kD"
       },
       "source": [
-        "##**Violin Plot**"
+        "**Violin Plot**"
       ]
     },
     {
@@ -860,7 +860,7 @@
         "id": "ZkC9byIpr9kE"
       },
       "source": [
-        "##**Swarm Plot**"
+        "**Swarm Plot**"
       ]
     },
     {
@@ -905,7 +905,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Pie chart**\n",
+        "**Pie chart**\n",
         "\n",
         "A pie chart is a circular statistical graphic, which is divided into slices to illustrate numerical proportion."
       ],
@@ -931,7 +931,7 @@
         "id": "nVOiW-2_sSWs",
         "outputId": "db69740b-59fd-4c58-b89d-808a9953438e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
