--- a/Handling_Missing_values.ipynb
+++ b/Handling_Missing_values.ipynb
@@ -77,6 +77,7 @@
         }
       ],
       "source": [
+        "#show columns which contain nan-values\n",
         "sns.heatmap(df.isnull())\n",
         "plt.show()"
       ]
@@ -107,6 +108,7 @@
         }
       ],
       "source": [
+        "#show relationship between columns and target column('Weekly_Sales)\n",
         "plt.figure(figsize=(28,12))\n",
         "plt.xticks( fontsize=20)\n",
         "plt.yticks( fontsize=20)\n",
